--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -17,10 +17,10 @@
     </a>
     <div style="width:70%;margin-left:auto;margin-right:auto;">
         <p>
-            <img width="300" height="300" th:src="${'http://localhost:8080/'+item.getImgPath()}">
+            <img width="300" height="300" th:src="${'http://localhost:8080/images/'+item.getId()}">
         </p>
         <p>
-            <b th:text="${item.getTitle()}"></b>
+            <b th:text="${item.getName()}"></b>
             <b th:text="${item.getPrice()}+' руб.'" style="text-align:right;"></b>
         </p>
         <p>
