--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -19,28 +19,28 @@
 <table style="width:70%;margin-left:auto;margin-right:auto;">
     <tr>
         <td>
-            <h2 th:text="${'Заказ №'+order.id()}"></h2>
+            <h2 th:text="${'Заказ №'+order.getId()}"></h2>
         </td>
     </tr>
-    <tr th:each="item : ${order.items()}">
+    <tr th:each="item : ${order.getItems()}">
         <td>
             <table>
                 <tr>
                     <td>
                         <a th:href="${'/items/'+item.getId()}">
-                            <img width="300" height="300" th:src="${'http://localhost:8080/'+item.getImgPath()}">
+                            <img width="300" height="300" th:src="${'http://localhost:8080/'+item.getProduct().getId()}">
                         </a>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <b th:text="${item.getTitle()}"></b>
+                        <b th:text="${item.getProduct().getName()}"></b>
                     </td>
                     <td>
                         <b th:text="${item.getCount()}+' шт.'"></b>
                     </td>
                     <td>
-                        <b th:text="${item.getPrice()*item.getCount()}+' руб.'"></b>
+                        <b th:text="${item.getProduct().getPrice()*item.getCount()}+' руб.'"></b>
                     </td>
                 </tr>
             </table>
@@ -48,7 +48,7 @@
     </tr>
     <tr>
         <td>
-            <h3 th:text="${'Сумма: '+order.totalSum()}+' руб.'"></h3>
+            <h3 th:text="${'Сумма: '+order.getTotalSum()}+' руб.'"></h3>
         </td>
     </tr>
 </table>
