add add-item template

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -12,6 +12,9 @@
     <a href="/cart/items" style="float:right;">
         <b>КОРЗИНА &cudarrr;</b>
     </a>
+    <a href="/items/add" style="float:right;">
+        <b>ДОБАВЛЕНИЕ ТОВАРОВ&cudarrr;</b>
+    </a>
     <table style="width:70%;margin-left:auto;margin-right:auto;">
         <tr>
             <td>
