--- a/src/main/resources/templates/add-item.html
+++ b/src/main/resources/templates/add-item.html
@@ -14,7 +14,7 @@
         <tr>
             <td>
                 <h3>Название товара</h3>
-                <textarea rows="2" style="width: 100%;" name="name" th:text=""></textarea>
+                <textarea rows="2" style="width: 100%;" name="name" th:text="${''}"></textarea>
             </td>
         </tr>
         <tr>
@@ -26,13 +26,13 @@
         <tr>
             <td>
                 <h3>Описание</h3>
-                <textarea rows="30" style="width: 100%;" name="description" th:text=""></textarea>
+                <textarea rows="30" style="width: 100%;" name="description" th:text="${''}"></textarea>
             </td>
         </tr>
         <tr>
             <td>
                 <h3>Цена</h3>
-                <textarea rows="1" style="width: 100%;" name="price" th:text=""></textarea>
+                <textarea rows="1" style="width: 100%;" name="price" th:text="${''}"></textarea>
             </td>
         </tr>
         <tr>
