--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -51,13 +51,13 @@
                 </form>
             </td>
         </tr>
-        <!--/*@thymesVar id="item" type="ru.yandex_practicum.shoponline.model.front.Item"*/-->
+        <!--/*@thymesVar id="item" type="ru.yandex_practicum.shoponline.model.front.ItemDto"*/-->
         <tr th:each="itemsRow : ${items}">
             <td th:each="item : ${itemsRow}">
                 <table>
                     <tr>
                         <td>
-                            <a th:href="${'/items/'+item.getId()}">
+                            <a th:href="${'/item/'+item.getId()}">
                                 <img width="300" height="300" th:src="${'http://localhost:8080/images/'+item.getId()}">
                             </a>
                         </td>
@@ -75,8 +75,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <form th:action="${'/main/items/'+item.getId()}" method="post">
-                                <button name="action" value="minus">-</button>
+                            <form th:action="${'/main/item/'+item.getId()}" method="post">
+                                <button th:if="${item.getCount() > 0}" name="action" value="minus">-</button>
                                 <span th:text="${item.getCount()}"></span>
                                 <button name="action" value="plus">+</button>
                                 <button name="action" value="plus" th:if="${item.getCount()==0}" style="float:right;">В корзину</button>
