--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -12,7 +12,7 @@
     <a href="/cart/items" style="float:right;">
         <b>КОРЗИНА &cudarrr;</b>
     </a>
-    <a href="/main/items" style="float:right;">
+    <a href="/" style="float:right;">
         <b>ГЛАВНАЯ &cudarrr;</b>
     </a>
     <div style="width:70%;margin-left:auto;margin-right:auto;">
@@ -26,8 +26,8 @@
         <p>
             <span th:text="${item.getDescription()}"></span>
         </p>
-        <form th:action="${'/items/'+item.getId()}" method="post">
-            <button name="action" value="minus">-</button>
+        <form th:action="${'/item/'+item.getId()}" method="post">
+            <button th:if="${item.getCount() > 0}" name="action" value="minus">-</button>
             <span th:text="${item.getCount()}"></span>
             <button name="action" value="plus">+</button>
             <button name="action" value="plus" th:if="${item.getCount()==0}" style="float:right;">В корзину</button>
