--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -9,14 +9,14 @@
 <a href="/cart/items" style="float:right;">
     <b>КОРЗИНА &cudarrr;</b>
 </a>
-<a href="/main/items" style="float:right;">
+<a href="/" style="float:right;">
     <b>ГЛАВНАЯ &cudarrr;</b>
 </a>
 <table style="width:70%;margin-left:auto;margin-right:auto;">
     <tr th:each="order : ${orders}">
         <td>
             <h2>
-                <a th:text="${'Заказ №'+order.getId()}" th:href="${'/orders/'+order.getId()}"></a>
+                <a th:text="${'Заказ №'+order.getId()}" th:href="${'/order/'+order.getId()+'/old'}"></a>
             </h2>
             <table>
                 <tr th:each="item : ${order.getItems()}">
