add tests for controller

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -7,10 +7,10 @@
 
 <body>
 <a href="/orders" style="float:right;">
-    <b>ЗАКАЗЫ &cudarrr;</b>
+    <b>ЗАКАЗЫ &#x2935;</b>
 </a>
 <a href="/" style="float:right;">
-    <b>ГЛАВНАЯ &cudarrr;</b>
+    <b>ГЛАВНАЯ &#x2935;</b>
 </a>
 <table style="width:70%;margin-left:auto;margin-right:auto;">
     <tr th:each="item : ${items}">
@@ -18,7 +18,7 @@
             <table>
                 <tr>
                     <td>
-                        <img width="300" height="300" th:src="${'http://localhost:8080/images/'+item.getProduct().getId()}">
+                        <img width="300" height="300" th:src="${'http://localhost:8080/images/'+item.getProduct().getId()}"></img>
                     </td>
                 </tr>
                 <tr>
@@ -36,7 +36,7 @@
                             <button th:if="${item.getCount() > 0}" name="action" value="minus">-</button>
                             <span th:text="${item.getCount()}"></span>
                             <button name="action" value="plus">+</button>
-                            <button name="action" value="delete" style="float:right;">&cross;</button>
+                            <button name="action" value="delete" style="float:right;">X</button>
                         </form>
                     </td>
                 </tr>
