--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -7,13 +7,13 @@
 
 <body>
     <a href="/orders" style="float:right;">
-        <b>ЗАКАЗЫ &cudarrr;</b>
+        <b>ЗАКАЗЫ &#x2935;</b>
     </a>
     <a href="/cart/items" style="float:right;">
-        <b>КОРЗИНА &cudarrr;</b>
+        <b>КОРЗИНА &#x2935;</b>
     </a>
     <a href="/items/add" style="float:right;">
-        <b>ДОБАВЛЕНИЕ ТОВАРОВ&cudarrr;</b>
+        <b>ДОБАВЛЕНИЕ ТОВАРОВ&#x2935;</b>
     </a>
     <table style="width:70%;margin-left:auto;margin-right:auto;">
         <tr>
@@ -22,7 +22,7 @@
                 <form>
                     <p>
                         <label for="search">Найти: </label>
-                        <input id="search" style="width:300px;" name="search" th:value="${search}">
+                        <input id="search" style="width:300px;" name="search" th:value="${search}"></input>
                         <button name="action">&#128269;</button>
                     </p>
                     <p>
@@ -58,7 +58,7 @@
                     <tr>
                         <td>
                             <a th:href="${'/item/'+item.getId()}">
-                                <img width="300" height="300" th:src="${'http://localhost:8080/images/'+item.getId()}">
+                                <img width="300" height="300" th:src="${'http://localhost:8080/images/'+item.getId()}"></img>
                             </a>
                         </td>
                     </tr>
