--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -7,10 +7,10 @@
 
 <body>
 <a href="/cart/items" style="float:right;">
-    <b>КОРЗИНА &cudarrr;</b>
+    <b>КОРЗИНА &#x2935;</b>
 </a>
 <a href="/" style="float:right;">
-    <b>ГЛАВНАЯ &cudarrr;</b>
+    <b>ГЛАВНАЯ &#x2935;</b>
 </a>
 <table style="width:70%;margin-left:auto;margin-right:auto;">
     <tr th:each="order : ${orders}">
