--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -7,13 +7,13 @@
 
 <body>
 <a href="/orders" style="float:right;">
-    <b>ЗАКАЗЫ &cudarrr;</b>
+    <b>ЗАКАЗЫ &#x2935;</b>
 </a>
 <a href="/cart/items" style="float:right;">
-    <b>КОРЗИНА &cudarrr;</b>
+    <b>КОРЗИНА &#x2935;</b>
 </a>
 <a href="/" style="float:right;">
-    <b>ГЛАВНАЯ &cudarrr;</b>
+    <b>ГЛАВНАЯ &#x2935;</b>
 </a>
 <h1 style="text-align:center" th:if="${newOrder}">Поздравляем! Успешная покупка! &#128578;</h1>
 <table style="width:70%;margin-left:auto;margin-right:auto;">
@@ -28,7 +28,7 @@
                 <tr>
                     <td>
                         <a th:href="${'/items/'+item.getId()}">
-                            <img width="300" height="300" th:src="${'http://localhost:8080/images/'+item.getProduct().getId()}">
+                            <img width="300" height="300" th:src="${'http://localhost:8080/images/'+item.getProduct().getId()}"></img>
                         </a>
                     </td>
                 </tr>
