--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Витрина товаров</title>
+    <meta charset="UTF-8">
 </head>
 
 <body>
@@ -73,16 +74,16 @@
                     <tr>
                         <td th:text="${item.getDescription()}"></td>
                     </tr>
-                    <tr>
-                        <td>
-                            <form th:action="${'/main/item/'+item.getId()}" method="post">
-                                <button th:if="${item.getCount() > 0}" name="action" value="minus">-</button>
-                                <span th:text="${item.getCount()}"></span>
-                                <button name="action" value="plus">+</button>
-                                <button name="action" value="plus" th:if="${item.getCount()==0}" style="float:right;">В корзину</button>
-                            </form>
-                        </td>
-                    </tr>
+<!--                    <tr>-->
+<!--                        <td>-->
+<!--                            <form th:action="${'/main/item/'+item.getId()}" method="post">-->
+<!--                                <button th:if="${item.getCount() > 0}" name="action" value="minus">-</button>-->
+<!--                                <span th:text="${item.getCount()}"></span>-->
+<!--                                <button name="action" value="plus">+</button>-->
+<!--                                <button name="action" value="plus" th:if="${item.getCount()==0}" style="float:right;">В корзину</button>-->
+<!--                            </form>-->
+<!--                        </td>-->
+<!--                    </tr>-->
                 </table>
             </td>
         </tr>
