--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Заказы</title>
+    <meta charset="UTF-8">
 </head>
 
 <body>
@@ -20,7 +21,7 @@
             </h2>
             <table>
                 <tr th:each="item : ${order.getItems()}">
-                    <td th:text="${item.getProduct().getName()+' ('+item.getCount()+' шт.) '+(item.getProduct().getPrice()*item.getCount())+' руб.'}"></td>
+                    <td th:text="${item.getName()+' ('+item.getCount()+' шт.) '+(item.getPrice()*item.getCount())+' руб.'}"></td>
                 </tr>
             </table>
             <p>
