--- a/src/main/resources/templates/add-item.html
+++ b/src/main/resources/templates/add-item.html
@@ -10,30 +10,12 @@
 <a href="/" style="float:right;">
     <b>НА ГЛАВНУЮ &#x2935;</b>
 </a>
-<form method="POST" th:action="${'/saveItem'}" enctype="multipart/form-data">
+<form method="POST" th:action="${'/upload'}" enctype="multipart/form-data">
     <table style="width:50%;margin-left:auto;margin-right:auto;">
         <tr>
             <td>
-                <h3>Название товара</h3>
-                <textarea rows="2" style="width: 100%;" name="name" th:text="${''}"></textarea>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <h3>Изображение</h3>
-                <input type="file" name="image"></input>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <h3>Описание</h3>
-                <textarea rows="30" style="width: 100%;" name="description" th:text="${''}"></textarea>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <h3>Цена</h3>
-                <textarea rows="1" style="width: 100%;" name="price" th:text="${''}"></textarea>
+                <h3>Добавьте csv-файл для загрузки новых товаров</h3>
+                <input type="file" name="file"></input>
             </td>
         </tr>
         <tr>
